# info

./: CLAUDE.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
docs/feueron/: benachrichtigungen.md  dienstbuch.md  einsatzberichte.md  lehrgang.md  login.md  personal.md  technik.md
scripts/: __init__.py  cli.py
scripts/feueron/: __init__.py  annotations.py  credentials.py  generate.py  screenshots.py
scripts/feueron/api/: __init__.py  client.py  einsatzdienst.py  feuerwehr.py  finanzen.py  models.py  person.py  reference.py
scripts/feueron/migration/: __init__.py  address_check.py  bank_check.py  contact_check.py  erreichbarkeiten_dedup.py  erreichbarkeiten_parser.py  passive_import.py  report_parser.py
scripts/feueron/models/: __init__.py  addresses.py  base.py  equipment.py  persons.py
tools/: __init__.py  annotation.py  browserframe.py
