[project]
name = "info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zensical>=0.0.21",
    "playwright>=1.58.0",
    "pillow>=11.1.0",
    "pydantic>=2.0",
    "typer>=0.15",
    "phonenumbers>=9.0.23",
    "httpx>=0.28",
]

[project.scripts]
info = "scripts.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "tools"]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "ruff>=0.15.0",
]
